Fix misalignment of Coffee

--- a/css/app.css
+++ b/css/app.css
@@ -277,7 +277,9 @@ nav {
 
 #coffee-animation {
   position: relative;
-  height: 200px;
+  height: 150px;
+  width: 110px;
+  margin: 0 auto;
 }
 #cup, #plate, #smokes span {
   position: absolute;
@@ -287,7 +289,7 @@ nav {
   width: 100px;
   height: 70px;
   top: 80px;
-  left: 36%;
+  left: 8px;
   border-bottom-left-radius: 60%;
   border-bottom-right-radius: 60%;
 }
@@ -295,7 +297,7 @@ nav {
   width: 115px;
   height: 10px;
   top: 140px;
-  left: 33%;
+  left: 0;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
@@ -307,18 +309,18 @@ nav {
   animation: smoke 1.5s infinite ease-out;
 }
 #smokes span:first-child {
-  left: 45%;
+  left: 30px;
 }
 #smokes span:nth-child(2) {
-  left: 49%;
+  left: 45px;
   animation-delay: 0.3s;
 }
 #smokes span:nth-child(3) {
-  left: 54%;
+  left: 70px;
   animation-delay: 0.8s;
 }
 #smokes span:nth-child(4) {
-  left: 51%;
+  left: 60px;
   animation-delay: 1.2s;
 }
 @keyframes smoke {
